--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
-"dependencies": {
-  "next": "latest",
-  "react": "latest",
-  "react-dom": "latest"
+{
+  "name": "portfolio",
+  "version": "1.0.0",
+  "dependencies": {
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
+  }
 }
