--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
-"dependencies": {
-  "next": "latest",
-  "react": "latest",
-  "react-dom": "latest"
+{
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "name": "portfolio",
+  "version": "1.0.0",
+  "dependencies": {
+    "next": "^15.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  }
 }
